--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "drb-subgraph",
+  "name": "drbcoordinator",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ drb-subgraph",
-    "create-local": "graph create --node http://localhost:8020/ drb-subgraph",
-    "remove-local": "graph remove --node http://localhost:8020/ drb-subgraph",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 drb-subgraph",
+    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ drbcoordinator",
+    "create-local": "graph create --node http://localhost:8020/ drbcoordinator",
+    "remove-local": "graph remove --node http://localhost:8020/ drbcoordinator",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 drbcoordinator",
     "test": "graph test"
   },
   "dependencies": {
