--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -8,9 +8,9 @@ dataSources:
     name: CommitReveal2L1
     network: sepolia
     source:
-      address: "0xbeEBBd0E8aC4535a9d5Eab88d845f1082d62Fc25"
+      address: "0x0b0da9D26818943e3983f766102E12B3Df77f8c8"
       abi: CommitReveal2L1
-      startBlock: 7976000
+      startBlock: 8040030
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.9
@@ -21,16 +21,17 @@ dataSources:
         - CvSubmitted
         - DeActivated
         - EIP712DomainChanged
+        - IsInProcess
         - L1FeeCalculationSet
         - MerkleRootSubmitted
         - OwnershipHandoverCanceled
         - OwnershipHandoverRequested
         - OwnershipTransferred
         - RandomNumberGenerated
+        - RandomNumberRequested
         - RequestedToSubmitCo
         - RequestedToSubmitCv
         - RequestedToSubmitSFromIndexK
-        - Round
         - SSubmitted
       abis:
         - name: CommitReveal2L1
@@ -46,6 +47,8 @@ dataSources:
           handler: handleDeActivated
         - event: EIP712DomainChanged()
           handler: handleEIP712DomainChanged
+        - event: IsInProcess(uint256)
+          handler: handleIsInProcess
         - event: L1FeeCalculationSet(uint8)
           handler: handleL1FeeCalculationSet
         - event: MerkleRootSubmitted(uint256,bytes32)
@@ -58,14 +61,14 @@ dataSources:
           handler: handleOwnershipTransferred
         - event: RandomNumberGenerated(uint256,uint256,bool)
           handler: handleRandomNumberGenerated
+        - event: RandomNumberRequested(uint256,uint256,address[])
+          handler: handleRandomNumberRequested
         - event: RequestedToSubmitCo(uint256,uint256[])
           handler: handleRequestedToSubmitCo
         - event: RequestedToSubmitCv(uint256,uint256[])
           handler: handleRequestedToSubmitCv
         - event: RequestedToSubmitSFromIndexK(uint256,uint256)
           handler: handleRequestedToSubmitSFromIndexK
-        - event: Round(uint256,uint256)
-          handler: handleRound
         - event: SSubmitted(uint256,bytes32,uint256)
           handler: handleSSubmitted
       file: ./src/commit-reveal-2-l-1.ts
